--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TODO</title>
+  <title>Currency Exchange</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>How much is your money worth in other countries?</h1>
+    <label for="usCurrency">Enter your amount in USD:</label>
+    <input id="usCurrency" type="number">
+    <button class="btn-success" id="convertButton">Exchange it!</button>
+    <div class="showErrors"></div>
+    <div class="showCurrency1"></div>
+    <div class="showCurrency2"></div>
+  </div>
+</body>
+</html>  
