--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,16 @@
       <label for="USD">Enter your amount in USD:</label>
       <input id="USD" type="number" class="form-control" placeholder="Enter Dollar Amount" required>
       <label for="otherCountry"> Convert to</label>
-      <select name="othercountry" id="otherCountry" class="form-control" required>
+      <select name="otherCountry" id="otherCountry" class="form-control" required>
         <option value="none" selected:"select" hidden></option>
       </select>
 
       </div>
       <button class="btn-success" id="convertButton">Exchange it!</button>
-      <div id="result"
+      <div id="result"></div>
     
     <div class="showErrors"></div>
-    <div class="showCurrency1"></div>
-    <div class="showCurrency2"></div>
+
   </div>
 </body>
 </html>  
